# stitchEm

./: .clang-format  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  User Guide (VideoStitch Studio).md  User Guide.md  cloc_definition.txt  cloc_exclude.txt  deps.json  release.sh  update.py
IO/: CMakeLists.txt  README.md
IO/src/aja/: CMakeLists.txt  README.md  export.cpp  ntv2Discovery.cpp  ntv2Discovery.hpp  ntv2Helper.cpp  ntv2Helper.hpp  ntv2Reader.cpp  ntv2Reader.hpp  ntv2Writer.cpp  ntv2Writer.hpp  ntv2plugin.cpp  ntv2plugin.hpp
IO/src/av/: CMakeLists.txt  README.md
IO/src/bmp/: CMakeLists.txt  bmpInput.cpp  bmpInput.hpp  bmpr.hpp  export.cpp
IO/src/common/: CMakeLists.txt
IO/src/decklink/: CMakeLists.txt  README.md
IO/src/exr/: CMakeLists.txt
IO/src/jpg/: CMakeLists.txt
IO/src/magewell/: CMakeLists.txt  README.md  export.cpp  magewell_discovery.cpp  magewell_discovery.hpp  magewell_helpers.cpp  magewell_helpers.hpp  magewell_reader.cpp  magewell_reader.hpp
IO/src/magewellpro/: CMakeLists.txt  README.md  export.cpp  magewellDiscovery.cpp  magewellDiscovery.hpp  magewellReader.cpp  magewellReader.hpp  magewell_helpers.cpp  magewell_helpers.hpp
IO/src/mp4/: CMakeLists.txt  export.cpp  mp4Input.cpp  mp4Input.hpp
IO/src/pam/: CMakeLists.txt
IO/src/png/: CMakeLists.txt
IO/src/portaudio/: CMakeLists.txt  README.md
IO/src/raw/: CMakeLists.txt
IO/src/rtmp/: CMakeLists.txt  README.md
IO/src/sharedmemory/: README.md
IO/src/test/: CMakeLists.txt  portaudioTest.cpp
IO/src/tiff/: CMakeLists.txt
IO/src/v4l2/: CMakeLists.txt
IO/src/ximea/: README.md  export.cpp  xiCamera.cpp  xiCamera.h  ximea_reader.cpp  ximea_reader.hpp  ximea_unpack.cu  ximea_unpack.hpp
IO/src/ximea_2/: CMakeLists.txt  README.md  export.cpp  ximeaDiscovery.cpp  ximeaDiscovery.hpp  ximeaReader.cpp  ximeaReader.hpp
apps/src/AndroidDemo/: CMakeLists.txt  install.sh
apps/src/batchstitcher/: CMakeLists.txt  autoelidelabel.hpp  batch.rc  batchertask.cpp  batchertask.hpp  batchstitcher.qrc  batchwindow.cpp  batchwindow.hpp  batchwindow.ui  logdialog.cpp  logdialog.hpp  logdialog.ui  main.cpp  tasktable.cpp  tasktable.hpp
apps/src/libvideostitch-base/: CMakeLists.txt  appslogging.hpp  calibrationImport.cpp  calibrationImport.hpp  common-config.hpp  file.cpp  file.hpp  frame.hpp  geometry.cpp  geometry.hpp  interactiverenderer.cpp  interactiverenderer.hpp  interactivewidget.cpp  interactivewidget.hpp  lambdathread.hpp  linkhelpers.hpp  lockingproxy.hpp  logmanager.cpp  logmanager.hpp  matrices.cpp  matrices.hpp  mirrorwidget.cpp  mirrorwidget.hpp  msgboxhandler.cpp  msgboxhandler.hpp  oculusrenderer.cpp  oculusrenderer.hpp  oculuswindow.cpp  oculuswindow.hpp  projection.cpp  projection.hpp  renderer.cpp  renderer.hpp  shaders.qrc  singleton.hpp  steamvrrenderer.cpp  steamvrrenderer.hpp  steamvrwindow.cpp  steamvrwindow.hpp  texture.cpp  (+9 more)
apps/src/libvideostitch-gui/: CMakeLists.txt  common.hpp  libvideostitch-gui.qrc
apps/src/tests/: CMakeLists.txt  launch.sh
cmake/r8b/: CMakeLists.txt
discovery/: CMakeLists.txt
discovery/include/libgpudiscovery/: backendLibHelper.hpp  config.hpp  cudaDeviceInfo.hpp  delayLoad.hpp  fileHelper.hpp  genericDeviceInfo.hpp  openCLDeviceInfo.hpp
discovery/src/: device.cpp  device.hpp  deviceHelper.cpp  deviceHelper.hpp
discovery/src/backendLib/: backendLibHelper.cpp  backendLibLoader.cpp  backendLibLoader.hpp
discovery/src/tests/: deviceNameTest.cpp
discovery/src/utils/: fileHelper.cpp
lib/: .gitattributes  CMakeLists.txt  README.md  apple.cmake  astyle.sh  cppcheck-supp.txt  generateFakeLibvideostitch.cmake  libversion.cmake  libvideostitch_CUDA.cmake  libvideostitch_OpenCL.cmake  linux.cmake  windows.cmake
lib/bindings/: CMakeLists.txt  README  gen_documentation.sh  gen_lint_report.sh  package.sh  pylint.rcfile  setup.py
lib/bindings/vs/: CppCallback.hpp  __init__.py  algorithmListenerGIL.hpp  compositor.hpp  definitions.i  extensions.i  renderer.hpp  runtime.i  stitch_loop.hpp  videostitch.i
lib/doc/: Doxyfile-complete  Doxyfile-library  Doxyfile-library-xml  algorithm_format.md  exp_correction.tex  mainpage.dox  pts_format.md  ptv_format.md
lib/doc/doxy2swig/: README.md  doxy2swig.py
lib/doc/template/: additionalstylesheet.css  footer.html  header.html
lib/include/libvideostitch/: algorithm.hpp  allocator.hpp  ambDecoderDef.hpp  ambisonic.hpp  audio.hpp  audioBlock.hpp  audioObject.hpp  audioPipeDef.hpp  audioWav.hpp  cameraDef.hpp  circularBuffer.hpp  config.hpp  context.hpp  controlPointListDef.hpp  controlPointListUpdater.hpp  controller.hpp  curves.hpp  deferredUpdater.hpp  delayedAction.hpp  depthController.hpp  depthDef.hpp  dirutils.hpp  emor.hpp  frame.hpp  geometryDef.hpp  gpu_device.hpp  imageFlowFactory.hpp  imageMergerFactory.hpp  imageProcessingUtils.hpp  imageWarperFactory.hpp  imuData.hpp  input.hpp  inputController.hpp  inputDef.hpp  inputDefinitionUpdater.hpp  inputFactory.hpp  logging.hpp  matrix.hpp  mergerMaskDef.hpp  mergerMaskUpdater.hpp  (+29 more)
lib/samples/ambisonic/: CMakeLists.txt  ambisonicEncoderTool.cpp
lib/samples/autocrop/: CMakeLists.txt  autocrop-cmd.cpp
lib/samples/calibrationimport/: CMakeLists.txt  calibrationimport.cpp
lib/samples/common/: cmdUtils.cpp  cmdUtils.hpp
lib/samples/depth/: CMakeLists.txt  depth.cpp
lib/samples/ptvb2ptv/: CMakeLists.txt  ptvb2ptv.cpp
lib/samples/sample-02-fullCmd/: CMakeLists.txt  filehelper.hpp  videostitch-cmd.cpp
lib/samples/undistort/: CMakeLists.txt  undistort.cpp
lib/src/IO/: sink.cpp
lib/src/audio/: ambisonic.cpp  asrc.cpp  asrc.hpp  audio.cpp  audioBlock.cpp  audioPipeFactory.cpp  audioPipeFactory.hpp  audioPipeline.cpp  audioPipeline.hpp  audioPreProcessor.hpp  audiogen.cpp  audiogen.hpp  converter.cpp  converter.hpp  delayCalculator.cpp  delayCalculator.hpp  envelopeDetector.cpp  envelopeDetector.hpp  filter.cpp  filter.hpp  gain.cpp  gain.hpp  resampler.cpp  resampler.hpp  sampleDelay.cpp  (+6 more)
tests/cli_tests/: .gitignore  CMakeLists.txt  README  behave.ini  behave.sh  picture.py  template.tpl
(+2447 files in other folders)
